# XEN

./: .clang-format  .doxyfile  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DEPENDENCIES.md  Demo.cpp  Dependencies.md  GLEngine.cpp  Monke.cpp  Monke.h  Projects.cmake  README.md  XENEngine.sln  main.cpp
Classes/: Shader.cpp  Shader.h
Core/: Camera.cpp  Camera.h  Color.cpp  Color.h  Component.cpp  Component.h  DebugUI.cpp  DebugUI.h  DirectionalLight.cpp  DirectionalLight.h  Framebuffer.cpp  FullscreenQuad.cpp  FullscreenQuad.h  GameApp.cpp  GameApp.h  GameObject.cpp  GameObject.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsError.cpp  GraphicsTesting.h  Input.cpp  Input.h  InputCodes.h  InputEvents.h  InputListener.h  KeyCode.h  Lifetime.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  PerformanceMonitor.cpp  PerformanceMonitor.h  PointLight.cpp  PointLight.h  (+26 more)
Core/Engine/: GameApp.cpp  GraphicsContext.cpp
Core/Interfaces/: Component.h  Drawable.h  GameObject.h  InputListener.h
Core/PostProcessing/: Bloom.cpp  Bloom.h  PostProcessing.cpp  PostProcessing.h  SSAO.cpp  SSAO.h  ToneMapper.cpp  ToneMapper.h
Core/Shaders/: AcesTMC.glsl  BlinnPhong.glsl  Quad.glsl  ShaderImports.inl  ShadowDepth.glsl  ShadowMapDepth.glsl  SkyDome.glsl  Skybox.glsl  Text.glsl  Unlit.glsl
Docs/: API.md  BUILDING.md  QUICKSTART.md
Documentation/html/: _color_8cpp.html  _color_8cpp_source.html  _color_8h.html  _color_8h.js  _color_8h_source.html  _core_8h.html  _core_8h.js  _core_8h_source.html  _core_defines_8h.html  _core_defines_8h.js  _core_defines_8h_source.html  _core_minimal_8h.html  _core_minimal_8h_source.html  _core_types_8h.html  _core_types_8h.js  _core_types_8h_source.html  _engine_helpers_8inl.html  _engine_helpers_8inl_source.html  _logger_8cpp.html  _logger_8cpp.js  _logger_8cpp_source.html  _logger_8h.html  _logger_8h.js  _logger_8h_source.html  _logger_types_8h.html  _logger_types_8h.js  _logger_types_8h_source.html  _math_8h.html  _math_8h_source.html  _math_defines_8h.html  _math_defines_8h.js  _math_defines_8h_source.html  _math_types_8h.html  _math_types_8h.js  _math_types_8h_source.html  _r_e_a_d_m_e_8md.html  _s_t_l_helpers_8inl.html  _s_t_l_helpers_8inl.js  _s_t_l_helpers_8inl_source.html  _vector2_d_8cpp.html  (+114 more)
Documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+20 more)
Examples/ModelLoading/: CMakeLists.txt  Demon.cpp  Demon.h  Floor.cpp  Floor.h  Monke.cpp  Monke.h  SkyDome.cpp  SkyDome.h  Statue.cpp  Statue.h  TV.cpp  TV.h  main.cpp
Licenses/: KHR.license  glad.license  stb.license
ModelConverter/: CMakeLists.txt  README.md  main.cpp  manifest.example.json  manifest.json
Resources/Models/: Floor.assbin  Floor.fbx  Monke.fbx  PortalGun.fbx  SkyDome.fbx  Snowden.assbin  Snowden.fbx  TV.fbx  monk.fbx
Resources/Shaders/: Text.glsl  cube.glsl
Scripts/: BootstrapVcpkg.py  CreateNewProject.py  ReconfigCmake.py
Shaders/: triangle.glsl
Tests/: CMakeLists.txt  test_color.cpp  test_gameobject.cpp  test_scene.cpp  test_shader.cpp
XENEditor/: XENEditor.cpp  XENEditor.vcxproj  XENEditor.vcxproj.filters  imgui.ini
XENEngine-Core/: XENEngine-Core.vcxproj
XENEngine-Core/Core/Private/: Color.cpp
XENEngine-Core/Core/Private/Logger/: Logger.cpp
XENEngine-Core/Core/Private/Math/: Vector2D.cpp  Vector3D.cpp  Vector4D.cpp
XENEngine-Core/Core/Public/: Color.h  Core.h  CoreDefines.h  CoreMinimal.h  CoreTypes.h
XENEngine-Core/Core/Public/Logger/: Logger.h  LoggerTypes.h
XENEngine-Core/Core/Public/Math/: Math.h  MathDefines.h  MathTypes.h  Vector.inl  Vector2D.h  Vector3D.h  Vector4D.h
XENEngine-Core/Core/Public/Templates/: EngineHelpers.inl  STLHelpers.inl
XENEngine-Platform/: XENEngine-Platform.vcxproj  dllmain.cpp
XENEngine-Platform/Platform/Private/Windows/: WindowsClock.cpp  WindowsPlatform.cpp
XENEngine-Platform/Platform/Public/: GenericPlatform.h  Platform.h
XENEngine-Platform/Platform/Public/Windows/: WindowsClock.h  WindowsHelpers.inl  WindowsPlatform.h
XENEngine-RHI/: XENEngine-RHI.vcxproj
XENEngine-RHI/RHI/Private/DX11/: DX11RHI.cpp  DX11RenderContext.cpp  DX11RenderObject.cpp
XENEngine-RHI/RHI/Public/: RHI.h  RHITypes.h
XENEngine-RHI/RHI/Public/DX11/: DX11Includes.h  DX11RHI.h  DX11RenderContext.h  DX11RenderObject.h
XENEngine-Runtime/: XENEngine-Runtime.vcxproj  dllmain.cpp
